correction z-index a propos + accents

--- a/style.css
+++ b/style.css
@@ -349,7 +349,7 @@ h4{
     display: flex;
     flex-direction: column;
     gap: 24px;
-    z-index: 1000;
+    z-index: 50;
     position: fixed;
     top: 0;
     left: calc(var(--aproposSize)*-1);
@@ -397,7 +397,7 @@ h4{
     width: 100%;
     height: 100%;
     background-image: linear-gradient(to right, var(--stroke-color), var(--stroke-color)), linear-gradient(to right, var(--stroke-color), var(--stroke-color)),linear-gradient(to right, var(--stroke-color), var(--stroke-color));
-    z-index: 300;
+    z-index: 25;
     display: grid;
     opacity: 0.5;
 }
